# Velo

./: CMakeLists.txt  README.md  pre-commit.sh
.github/workflows/: network.yml
console/: CMakeLists.txt
console/examples/: CMakeLists.txt  console.cpp
console/include/console/: console.h
console/src/: console_linux.cpp  console_windows.cpp
generic/: CMakeLists.txt
generic/examples/: CMakeLists.txt  serializer.cc  serializer.cpp  typelist.cpp
generic/include/generic/: algorithm.hh  big_endian.hh  little_endian.hh  numeric.hh  serializer.hh  serializer.hpp  type_traits.hh  typelist.hh
generic/test/: CMakeLists.txt  numeric.cpp
generic/tests/: CMakeLists.txt  numeric.cpp
geometry/: CMakeLists.txt
geometry/include/geometry/: basic_line.h  basic_point.hh  traits.hh
geometry/include/geometry/algorythms/: distance.hh  equivalent.hh  intersect.hh  parallel.hh
geometry/include/geometry/flat/: line.hh  point.hh  segment.hh
geometry/include/geometry/spatial/: line.hh  point.hh
geometry/test/: CMakeLists.txt  distance.cc  intersect.cc  line.cc  point.cc
geometry/tests/: CMakeLists.txt  distance.cpp  intersect.cpp  line.cpp  point.cpp
network/: CMakeLists.txt  config.hpp.in
network/examples/: CMakeLists.txt  icmp_header.hpp  icmp_ping.cpp  ipv4_header.hpp  ssl_echo_client.cpp  ssl_echo_server.cpp  tcp_echo_client.cpp  tcp_echo_server.cpp  udp_echo_client.cpp  udp_echo_server.cpp
network/include/network/: basic_datagram_socket.hpp  basic_endpoint.hpp  basic_resolver_results.hpp  basic_socket.hpp  basic_socket_acceptor.hpp  basic_socket_iostream.hpp  basic_socket_streambuf.hpp  basic_stream_socket.hpp  buffer.hpp  error.hpp  host_name.hpp  native.hpp  socket_options.hpp
network/include/network/ip/: address.hpp  address_v4.hpp  address_v6.hpp  tcp.hpp  udp.hpp
network/include/network/ssl/: basic_context.hpp  context.hpp  native.hpp  stream.hpp
network/tests/: CMakeLists.txt  address.cpp  address_v4.cpp  address_v6.cpp  endpoint.cpp
system/: CMakeLists.txt
system/examples/: CMakeLists.txt  pair.cc  stream_client.cc  stream_client.cpp  stream_server.cc
system/include/system/ipc/: basic_endpoint.h  datagram.hh  message_queue.h  pair.hh  stream.hh  stream.hpp
utility/: CMakeLists.txt
utility/examples/: CMakeLists.txt  argumentParse.cpp  argument_parse.cpp  file_watch.cpp  logger_example.cpp  performance.cpp  tmp.cpp
utility/include/utility/: arch.h  arch.hpp  argument_parser.h  argument_parser.hpp  bit_helper.h  debug.h  file_watcher.h  file_watcher.hpp  logger.h  logger.hpp  performance.h  performance.hpp  settings.h  settings.hpp  types.h
utility/src/: argument_parser.cpp  file_watcher.cpp  logger.cpp  settings.cpp
